# testFastAPI

./: docker-compose.yaml  pyproject.toml  requirements.txt
src/: main.py
src/tasks/: routes.py
